[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/tile.tres" type="TileSet" id=1]
[ext_resource path="res://Scripts/WorldReturn.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets2/portal.png" type="Texture" id=4]
[ext_resource path="res://Assets/ground_grass.png" type="Texture" id=5]
[ext_resource path="res://Assets/ground_grass_small.png" type="Texture" id=6]
[ext_resource path="res://Assets/mushroom_red.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Meat.gd" type="Script" id=8]
[ext_resource path="res://Assets/Goods Icons.png" type="Texture" id=9]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=10]
[ext_resource path="res://Score.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/echanted.jpg" type="Texture" id=12]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15.3458, 14.5531 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16.6792, 16.553 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 13.3459, 13.8863 )

[node name="World2" type="Node2D"]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 506.317, 318.434 )
scale = Vector2( 0.612741, 0.59549 )
texture = ExtResource( 12 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 93.3382, 127.279 )

[node name="WorldReturn" type="Area2D" parent="."]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="WorldReturn"]
position = Vector2( 0.707108, 40.3051 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="WorldReturn"]
position = Vector2( 0.707108, 40.3051 )
scale = Vector2( 0.4, 0.4 )
polygon = PoolVector2Array( 32, -100.4, 32, -98.6, 52, -86.6, 52, -85.2, 65, -70.2, 65, -68, 69, -60, 69, 58.6, 64.4, 71.5, 63.1, 71.5, 55.1, 83.5, 53.7, 83.5, 38.7, 96.5, 36.5, 96.5, 28.5, 100.5, -28.5, 100.5, -46, 91.7, -46, 90.3, -65, 70.3, -65, 68, -69, 60, -69, -58.6, -64.4, -71.5, -63, -71.5, -51, -87.5, -48.7, -87.5, -38.8, -96.5, -36.3, -96.5, -26.7, -100.5, 29.4, -100.5 )

[node name="Platforms" type="Node" parent="."]

[node name="TileMap" type="TileMap" parent="Platforms"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 31, 2, 0, 65567, 2, 0, 131103, 2, 0, 196639, 2, 0, 262175, 2, 0, 327680, 1610612737, 0, 327682, 1610612737, 0, 327708, 1610612737, 0, 327710, 1610612737, 0, 327711, 1610612737, 0, 458752, 1610612738, 0, 458753, 1610612738, 0, 458754, 1610612738, 0, 458755, 1610612738, 0, 458783, 2, 0, 458784, 2, 0, 524288, 1610612738, 0, 524290, 1610612738, 0, 524292, 1610612738, 0, 524319, 2, 0, 524320, 2, 0, 589824, 1610612738, 0, 589826, 1610612738, 0, 589828, 1610612738, 0, 589829, 1610612738, 0, 589855, 2, 0, 589856, 2, 0, 655360, 1610612738, 0, 655362, 1610612738, 0, 655364, 1610612738, 0, 655365, 1610612738, 0, 655391, 2, 0, 655392, 2, 0, 720896, 1610612738, 0, 720898, 1610612738, 0, 720900, 1610612738, 0, 720901, 1610612738, 0, 720927, 2, 0, 720928, 2, 0, 786432, 1610612738, 0, 786434, 1610612738, 0, 786436, 1610612738, 0, 786437, 1610612738, 0, 786463, 2, 0, 786464, 2, 0, 851968, 1610612738, 0, 851970, 1610612738, 0, 851972, 1610612738, 0, 851973, 1610612738, 0, 851999, 2, 0, 852000, 2, 0, 917504, 1610612738, 0, 917505, 2, 0, 917506, 1610612738, 0, 917508, 1610612738, 0, 917509, 1610612738, 0, 917535, 2, 0, 917536, 2, 0, 983040, 1610612738, 0, 983041, 2, 0, 983042, 1610612738, 0, 983044, 1610612738, 0, 983045, 2, 0, 983071, 2, 0, 1048576, 1610612738, 0, 1048577, 2, 0, 1048578, 1610612738, 0, 1048580, 1610612738, 0, 1048581, 2, 0, 1048607, 2, 0, 1114112, 1610612738, 0, 1114113, 2, 0, 1114114, 1610612738, 0, 1114115, 1610612738, 0, 1114116, 1610612738, 0, 1114117, 2, 0, 1114143, 2, 0, 1179649, 2, 0 )

[node name="StaticBody2D" type="StaticBody2D" parent="Platforms"]

[node name="Sprite" type="Sprite" parent="Platforms/StaticBody2D"]
position = Vector2( 539.001, 595.001 )
scale = Vector2( 3.5, 2 )
texture = ExtResource( 5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Platforms/StaticBody2D"]
position = Vector2( 539.001, 595.001 )
scale = Vector2( 3.5, 2 )
polygon = PoolVector2Array( 190, -41.6, 190, -7.8, 167.2, 33, 165.8, 33, 158.8, 40, 142, 40, -26, 47, -165, 47, -190, -4.4, -190, -41.6, -184, -46.9, 184, -47 )

[node name="StaticBody2D2" type="StaticBody2D" parent="Platforms"]
position = Vector2( -172, 295 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Platforms/StaticBody2D2"]
position = Vector2( 682.001, 137 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Platforms/StaticBody2D2"]
position = Vector2( 682.001, 137 )
scale = Vector2( 0.4, 0.4 )
polygon = PoolVector2Array( 100.5, -44.6, 100.5, -6.8, 82.9, 44, 81.6, 44, 77.9, 50, -10, 50, -74.5, 45.9, -74.5, 44.7, -79.5, 43.6, -79.5, 41.7, -86.5, 33.8, -86.5, 30.4, -100.5, -7.2, -100.5, -42.8, -93.5, -49.8, 94.5, -50 )

[node name="StaticBody2D4" type="StaticBody2D" parent="Platforms"]
position = Vector2( -330, 28 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Platforms/StaticBody2D4"]
position = Vector2( 682.001, 137 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Platforms/StaticBody2D4"]
position = Vector2( 682.001, 137 )
scale = Vector2( 0.4, 0.4 )
polygon = PoolVector2Array( 100.5, -44.6, 100.5, -6.8, 82.9, 44, 81.6, 44, 77.9, 50, -10, 50, -74.5, 45.9, -74.5, 44.7, -79.5, 43.6, -79.5, 41.7, -86.5, 33.8, -86.5, 30.4, -100.5, -7.2, -100.5, -42.8, -93.5, -49.8, 94.5, -50 )

[node name="StaticBody2D5" type="StaticBody2D" parent="Platforms"]
position = Vector2( -101, -11.0001 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Platforms/StaticBody2D5"]
position = Vector2( 682.001, 137 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Platforms/StaticBody2D5"]
position = Vector2( 682.001, 137 )
scale = Vector2( 0.4, 0.4 )
polygon = PoolVector2Array( 100.5, -44.6, 100.5, -6.8, 82.9, 44, 81.6, 44, 77.9, 50, -10, 50, -74.5, 45.9, -74.5, 44.7, -79.5, 43.6, -79.5, 41.7, -86.5, 33.8, -86.5, 30.4, -100.5, -7.2, -100.5, -42.8, -93.5, -49.8, 94.5, -50 )

[node name="StaticBody2D6" type="StaticBody2D" parent="Platforms"]
position = Vector2( -101, -11.0001 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Platforms/StaticBody2D6"]
position = Vector2( 682.001, 137 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Platforms/StaticBody2D6"]
position = Vector2( 682.001, 137 )
scale = Vector2( 0.4, 0.4 )
polygon = PoolVector2Array( 100.5, -44.6, 100.5, -6.8, 82.9, 44, 81.6, 44, 77.9, 50, -10, 50, -74.5, 45.9, -74.5, 44.7, -79.5, 43.6, -79.5, 41.7, -86.5, 33.8, -86.5, 30.4, -100.5, -7.2, -100.5, -42.8, -93.5, -49.8, 94.5, -50 )

[node name="StaticBody2D3" type="StaticBody2D" parent="Platforms"]
position = Vector2( -373, 265 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Platforms/StaticBody2D3"]
position = Vector2( 682.001, 137 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Platforms/StaticBody2D3"]
position = Vector2( 682.001, 137 )
scale = Vector2( 2, 2 )
polygon = PoolVector2Array( 28.5, -44.7, 28.5, -43.3, 40.5, -28.4, 40.5, -1.5, 35.4, 4.5, 32.8, 4.5, 27.7, 6.7, 29.3, 11.5, 26.5, 11.5, 23.5, 15.5, 21, 15.5, 18.6, 16.7, 22.6, 49.5, -23.5, 49.5, -23.5, 42.3, -19.9, 19.5, -21.3, 19.5, -26.5, 14.3, -26.5, 10.2, -26.2, 9.4, -40.5, 1.8, -40.5, -27.2, -36.8, -35.5, -35.4, -35.5, -25.4, -46.5, -23.1, -46.5, -18.6, -49.5, 18.9, -49.5 )

[node name="Meat" type="Area2D" parent="."]
position = Vector2( 517.001, 376.001 )
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Meat"]
position = Vector2( 293.334, 65.3335 )
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Meat"]
position = Vector2( 293.334, 66.0002 )
scale = Vector2( 1, 1 )
shape = SubResource( 3 )

[node name="Meat2" type="Area2D" parent="."]
position = Vector2( 517.001, 376.001 )
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Meat2"]
position = Vector2( 44.6668, -196.667 )
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Meat2"]
position = Vector2( 44.0001, -196 )
scale = Vector2( 1, 1 )
shape = SubResource( 4 )

[node name="Meat3" type="Area2D" parent="."]
position = Vector2( 520.001, 376.001 )
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Meat3"]
position = Vector2( 297.334, -160.667 )
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Meat3"]
position = Vector2( 295.334, -160.667 )
scale = Vector2( 1, 1 )
shape = SubResource( 5 )

[node name="Enemy0" parent="." instance=ExtResource( 10 )]
position = Vector2( 753.621, 453.3 )

[node name="Score" parent="." instance=ExtResource( 11 )]
margin_left = 78.6199
margin_top = 13.2993
margin_right = 118.62
margin_bottom = 27.2993
[connection signal="body_entered" from="Meat" to="Player" method="_on_Meat_body_entered"]
[connection signal="body_entered" from="Meat" to="Meat" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Meat2" to="Player" method="_on_Meat2_body_entered"]
[connection signal="body_entered" from="Meat2" to="Meat2" method="_on_Meat2_body_entered"]
[connection signal="body_entered" from="Meat3" to="Player" method="_on_Meat3_body_entered"]
[connection signal="body_entered" from="Meat3" to="Meat3" method="_on_Meat3_body_entered"]
