extends Area2D


func _on_Meat_body_entered(body):
	queue_free()
	


func _on_Area2D3_body_entered(body):
	queue_free()


func _on_Area2D2_body_entered(body):
	queue_free()


func _on_Area2D_body_entered(body):
	queue_free()


func _on_Meat2_body_entered(body):
	queue_free()


func _on_Meat3_body_entered(body):
	queue_free()
